# EasyConfig

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: auto-tag.yml  docs.yml  publish.yml  python-tests.yml
api_reference/: index.html
docs/: index.md  instantiation.md  schema.md
schema/: index.html
search/: search_index.json
src/easyconfig/: instantiator.py  parser.py
src/ezconfy/: cli.py  config_builder.py  instantiator.py  io.py  schema_parser.py  schema_watcher.py
src/ezconfy/codegen/: type_utils.py
src/ezconfy/core/: instantiator.py
tests/: conftest.py  test_config_builder.py  test_instantiator.py  test_parser.py
